# furtive-growth

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
doc/figures/: fig1_simple_chemostat.py  fig2D_chemostat_tradeoff_endstate_frequency.csv  fig2_chemostat_tradeoff.py  phase_diagrams.ai
doc/figures/notes/: figN1_simple_chemostat.py  phase_diagram.py  phase_diagram_sweep.py
growth/: __init__.py  callbacks.py  model.py  viz.py
sandbox/: chemostat_gamma_span.py  dev.py  frequency_heatmap.py  model_dev.py  testing_sweep.ipynb  two_species_critical_frequency.py
simulations/: chemostat_competition.py  chemostat_phase_diagram.py  chemostatic_growth.py  const_death_boombust.py  const_death_chemostat.py  correlation_chemostat.py  phase_diagram.py  two_species_phase_transition.py
tests/: test_model.py
