[tool.poetry]
name = "growth"
version = "0.0.01"
description = ""
authors = ["gchure <griffinchure@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.13.2"

[tool.poetry.group.dev.dependencies]
numpy = "^2.0.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
pandas = "^2.2.2"
tqdm = "^4.66.4"
scipy = "^1.14.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

exclude = [
    "sandbox",
    "simulations",
    "doc"
]
