[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "growth"
version = "0.0.1"
description = "Utilities for simulating growth and death in static and fluctuating conditions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Griffin Chure", email = "griffinchure@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scipy>=1.10.0",
    "seaborn>=0.12.2",
    "tqdm>=4.64.1",
    "pyfonts>=0.0.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
packages = {find = {exclude = ["docs", "doc", "sandbox", "dev", "growth.egg-info", "simulations"]}}
include-package-data = true